@@ -7,9 +7,11 @@ import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import lombok.val;
+import org.apache.commons.lang3.StringUtils;
 
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
+import java.util.regex.Pattern;
 
 /**
  * This is {@link DefaultServiceMatchingStrategy}.
@@ -21,19 +23,28 @@ import java.nio.charset.StandardCharsets;
 @RequiredArgsConstructor
 @Getter
 public class DefaultServiceMatchingStrategy implements ServiceMatchingStrategy {
+    private static final Pattern FRAGMENT_PATTERN = Pattern.compile("#.+");
+
     private final ServicesManager servicesManager;
-    
+
     @Override
     public boolean matches(final Service service, final Service serviceToMatch) {
+        /*
+        service - the original service supplied when the ticket was created.
+        serviceToMatch - the provided service requesting the ticket to be validated.
+        */
         try {
-            val thisUrl = URLDecoder.decode(service.getId(), StandardCharsets.UTF_8.name());
-            val serviceUrl = URLDecoder.decode(serviceToMatch.getId(), StandardCharsets.UTF_8.name());
-
-            LOGGER.trace("Decoded urls and comparing [{}] with [{}]", thisUrl, serviceUrl);
+            val thisUrl = removeFragmentFrom(URLDecoder.decode(service.getId(), StandardCharsets.UTF_8));
+            val serviceUrl = removeFragmentFrom(URLDecoder.decode(serviceToMatch.getId(), StandardCharsets.UTF_8));
+            LOGGER.debug("Decoded urls and comparing [{}] with [{}]", thisUrl, serviceUrl);
             return thisUrl.equalsIgnoreCase(serviceUrl);
         } catch (final Exception e) {
             LoggingUtils.error(LOGGER, e);
         }
         return false;
+    }
+
+    private static String removeFragmentFrom(final String id) {
+        return FRAGMENT_PATTERN.matcher(id).replaceAll(StringUtils.EMPTY);
     }
 }
